[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
dashmap = "6.0.1"
enum_dispatch = "0.3.13"
lazy_static = "1.5.0"
# This library provides a convenient derive macro for the standard library’s std::error::Error trait.
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "net", "macros", "fs", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-stream = "0.1.15"
futures = { version = "0.3.30", default-features = false }
